# ontocast

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  graph.mmd  mkdocs.yml  pyproject.toml
.github/workflows/: build-docs.yml  pre-commit.yml
aot_cast/: agent.py  chunk.py  onto.py  stategraph.py  tb.py  toolbox.py  util.py
aot_cast/agent/: __init__.py  aggregate.py  check_chunks.py  chunk_text.py  convert_document.py  criticise_facts.py  criticise_ontology.py  get_ontology_summary.py  render_facts.py  render_ontology_triples.py  save_kg.py  select_ontology.py  sublimate_ontology.py  validate.py
aot_cast/cli/: cmp_states.py  pdfs_to_markdown.py  plot_graph.py  serve.py  split_chunks.py
aot_cast/prompt/: render_facts.py  render_ontology.py
aot_cast/prompts/: criticise_ontology.py
aot_cast/tool/: __init__.py  aggregate.py  chunker.py  converter.py  ontology_manager.py  setup.py  toolbox.py  triple_manager.py  validate.py
aot_cast/tools/: __init__.py  onto.py  setup.py  toolbox.py
data/chunks/: chem.bassani-et-al-2024-nanocrystal-assemblies-current-advances-and-open-problems.json  fin.10Q.sfix.json
data/json/: fin.10Q.apple.json  (+8 more)
demo/: README.md
docker/: README.md
docs/: index.md
ontocast/: onto.py  stategraph.py  toolbox.py  util.py
run/: cache_pdfs.py  test_parse_pdf.py
src/: agent.py  chunk.py  config.py  onto.py  tools.py  util.py
test/: conftest.py  test_00_fuseki_triple_store.py  test_00_neo4j_triple_store.py  test_00_onto.py  test_00_tools.py  test_00_validation.py  test_01_state.py  test_02_ontology_render.py  test_03_facts_render.py  test_onto.py  test_state.py  test_tools.py  test_util.py  test_validation.py
(+114 files in other folders)
