[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "langchain-core>=0.3.49",
  "pre-commit>=4.2.0",
  "pygraphviz>=1.14",
  "pytest-dotenv>=0.5.2",
  "pytest-order>=1.3.0",
  "pytest>=8.3.5",
  "requests>=2.32.3",
  "ruff>=0.11.2"
]

[project]
dependencies = [
  "docling>=0.1.0",
  "langchain-community>=0.3.20",
  "langchain-mcp-adapters>=0.0.7",
  "langchain-openai>=0.3.12",
  "langchain>=0.3.22",
  "langgraph>=0.3.21",
  "mcp>=1.6.0",
  "owlready2>=0.47",
  "rdflib>=7.1.4",
  "rich>=14.0.0",
  "robyn>=0.53.0",
  "suthing>=0.3.0"
]
description = "Add your description here"
name = "agentic-onto-triple-cast"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.scripts]
cmp-states = "src.cli.cmp_states:main"
plot-graph = "src.cli.plot_graph:main"
serve-agentic = "src.cli.serve:run"

[tool.hatch.build.targets.wheel]
packages = ["src"]
